--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "Gusfahmi Alghazali Caniago",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.6",
-    "request": "^2.88.2",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "instagram-url-direct": "^2.0.2",
+    "nodemon": "^3.0.3",
+    "puppeteer": "^24.4.0",
     "tiktok-scraper": "^1.4.4",
-    "youtube-dl": "^3.0.2"
+    "yt-dlp-wrap": "^2.3.11"
   }
 }
