--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "instagram-url-direct": "^2.0.2",
     "nodemon": "^3.0.3",
     "puppeteer": "^24.4.0",
