--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "install": "chmod +x install.sh && ./install.sh",
-    "restart": "pm2 restart kraken-downloader",
-    "stop": "pm2 stop kraken-downloader",
-    "logs": "pm2 logs kraken-downloader"
+    "restart": "pm2 restart social-media-api",
+    "stop": "pm2 stop social-media-api",
+    "logs": "pm2 logs social-media-api"
   },
   "author": "Alfi Firdaus",
   "license": "ISC",
