--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-media-downloader",
+  "name": "social-media-api",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
