--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-NODE_ENV=production
+NODE_ENV=development
 FFMPEG_PATH=/opt/homebrew/bin/ffmpeg
-CHROME_PATH=/usr/bin/chromium-browser
-YT_DLP_PATH=/usr/local/bin/yt-dlp 
+CHROME_PATH=/opt/homebrew/bin/chromium
+YT_DLP_PATH=/opt/homebrew/bin/yt-dlp 
